# Learn-Algorithmic-Trading

./: .gitignore  README.md  bzrq_TS_DualMA.py  bzrq_ebt.py  bzrq_lbt.py  pyproject.toml
Chapter1/: buylowsellhigh.py
Chapter2/: apo.py  bbands.py  bzrq_tmp_1.py  bzrq_tmp_2.py  ema.py  macd.py  mom.py  rsi.py  seasonality.py  sma.py  stddev.py
Chapter3/: ch3_knn.py  ch3_logistic.py  ch3_svc.py  lasso.py  lr.py  ridge.py  scatter.py
Chapter4/: ch4_double_moving_average.py  ch4_naive_momentum_strategy2.py  ch4_pairs_correlation.py  ch4_pairs_correlation_init.py  ch4_pairs_correlation_real_symbol.py  ch4_turtle_trading.py
Chapter5/: AUDUSD=X_data.pkl  CADUSD=X_data.pkl  CHFUSD=X_data.pkl  EURUSD=X_data.pkl  GBPUSD=X_data.pkl  GOOG_data.pkl  JPYUSD=X_data.pkl  NZDUSD=X_data.pkl  basic_mean_reversion.csv  basic_mean_reversion.py  basic_trend_following.csv  basic_trend_following.py  compare_csvs.py  stat_arb.py  statistical_arbitrage.csv  volatility_adjusted_trend_following.csv  volatility_mean_reversion.py  volatility_trend_following.py
Chapter6/: risk_measures.py  volatility_adjusted_mean_reversion.csv  volatility_mean_reversion.py  volatility_mean_reversion_with_dynamic_risk_allocation.py  volatility_mean_reversion_with_risk_checks.py
Chapter7/: LiquidityProvider.py  LiquidityProvider_ut.py  MarketSimulator.py  MarketSimulator_ut.py  OrderBook.py  OrderBook_ut.py  OrderManager.py  OrderManager_ut.py  TradingSimulation.py  TradingSimulation_ut.py  TradingStrategy.py  TradingStrategy_ut.py
Chapter8/fixsim/: .gitignore  FIX44.simulator.xml  LICENSE  README.md  fixsim-client.conf.ini  fixsim-client.conf.yaml  fixsim-client.py  fixsim-server.conf.ini  fixsim-server.conf.yaml  fixsim-server.py
Chapter8/fixsim/fixsim/: __init__.py  client.py  server.py  sim.py
Chapter9/: TradingStrategyDualMA.py  eventbasedbacktester.py  forloopbacktester.py  goog.sql  goog_data.h5  goog_db.py  hd5pandareader.py  kdb_data.py  omstimeout.py  simulatedclock.py  test2.h5
tests/: __init__.py  conftest.py  test_setup_validation.py
